--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="YBrhWV3ahL9Z2vi2p3uZq-r08K4EAN9KF7f2kkMs3-8" />
     <title> Valient Institute</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
